# sharpy

./: .cgcignore  .editorconfig  .gitignore  .plan.md  CLASS_PARSING_AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  IMPLEMENTATION_NOTES_pass_ellipsis.md  IMPLEMENTATION_SUMMARY_PackageResolver.md  INHERITANCE_VERIFICATION_REPORT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PACKAGERESOLVER_QUICKREF.md  PLAN-0.1.0.1-audit-token-types.md  PLAN-0.1.0.2-audit-keywords.md  PLAN-0.1.0.3-audit-operators.md  PLAN-0.1.1.3-pipe-operator.md  PLAN-0.1.10.CG3.md  PLAN-0.1.10.CG4.md  PLAN-0.1.10.CG5.md  PLAN-0.1.5.3-DefaultParameterValidation.md  PLAN-0.1.8.8.md  PLAN-0.1.9.11-type-constraints.md  PLAN-0.1.9.5.md  PLAN-R-0.1.2.1.md  PLAN-R-0.1.4.2.md  PLAN.md  PLAN_0.1.10.6.md  PLAN_0.1.2.6.md  PLAN_0.1.3.4.md  PLAN_0.1.3.6.md  PLAN_0.1.6.3_SELF_HANDLING.md  PLAN_0.1.6.4_INIT_CODEGEN.md  PLAN_0.1.7.11_DunderOverrideRules.md  PLAN_R-0.1.1.4.md  PLAN_R-0.1.1.5.md  PLAN_R-0.1.2.1.md  PLAN_R-0.1.2.2.md  (+39 more)
build_tools/sharpy_auto_builder/: ARCHITECTURE.md  CONTRIBUTING.md  QUICK_START.md  README.md  __init__.py  agents.py  auto_decision.py  backends.py  cli.py  config.py  human_loop.py  interrupt_handler.py  memory.py  orchestrator.py  pyproject.toml  requirements.txt  response_analyzer.py  run.py  state.py  tasks.py
build_tools/sharpy_auto_builder/orchestrator/: __init__.py  core.py  followup.py  graph.py  helpers.py  types.py
build_tools/sharpy_auto_builder/orchestrator/nodes/: __init__.py  human_interaction.py  overseer.py  state_management.py  task_execution.py  validation.py
build_tools/sharpy_auto_builder/state/: config.json  execution_log.jsonl  ground_truth.json  orchestrator_checkpoints.db  orchestrator_checkpoints.db-shm  orchestrator_checkpoints.db-wal
build_tools/sharpy_auto_builder/state/answers/: q_20260113_054016_dd161470.json  (+1 more)
build_tools/sharpy_dogfood/: README.md  __init__.py  __main__.py  backends.py  cli.py  compiler.py  config.py  convert.py  logging_utils.py  orchestrator.py  prompts.py  pyproject.toml  reporting.py  run.py  run_quick_test.py
docs/: index.md  (+31 more)
python/: pyproject.toml
python/test/: test_names.py
rust/: Cargo.toml  MODULE_PARSING.md  clippy.toml  debug_method_call.spy  debug_tokens.rs  test_override.spy  test_prefix.spy  test_simple.spy
rust/examples/: debug_fstring.rs  debug_if_else.rs  debug_simple_if_else.rs  parser_demo.rs  sample_module.spy  test_abstract_methods.spy  test_exact_syntax.spy  test_fstring_ellipsis.spy
rust/src/: lib.rs  main.rs
rust/src/ast/: builder.rs  error.rs  mod.rs  node.rs  types.rs  visitor.rs
rust/src/codegen/: context.rs  expression.rs  generator.rs  mod.rs  name_mangling.rs  statement.rs  type_gen.rs
rust/src/lexer/: error.rs  indent.rs  keyword.rs  mod.rs  number_lexer.rs  scanner.rs  string_lexer.rs  test_indent.rs  token.rs
rust/src/parser/: error.rs  mod.rs  parse.rs  parser.rs
rust/src/semantic/: analyzer.rs  builtins.rs  mod.rs  module_registry.rs  multi_pass_analyzer.rs  scope.rs  symbol_table.rs  types.rs
rust/src/utils/: mod.rs  position.rs  unicode.rs
rust/tests/: debug_type_parsing.rs  debug_while.rs  test_abstract_methods.rs  test_advanced_comments_strings.rs  test_advanced_operators.rs  test_ast.rs  test_attribute_access.rs  test_attribute_method_calls.rs  test_binary_operations.rs  test_binary_operations_advanced.rs  test_bool_ifexp_namedexpr.rs  test_builtin_codegen_demo.rs  test_builtin_symbol_registration.rs  test_chained_function_calls.rs  test_class_struct_protocol_definitions.rs  test_comments_and_strings.rs  test_comments_strings.rs  test_comprehensive.rs  test_comprehensive_methods.rs  test_debug_semantic.rs  test_dict_and_set_literals.rs  test_edge_cases.rs  test_enhanced_function_validation.rs  test_error_handling.rs  test_for_while_try_statements.rs  test_fstring_ellipsis_parsing.rs  test_function_calls.rs  test_function_calls_advanced.rs  test_function_definitions.rs  test_generic_types.rs  test_import_statements.rs  test_indentation.rs  test_integration.rs  test_lambda_expressions.rs  test_lambda_integration.rs  test_lexer.rs  test_module_integration.rs  test_module_parsing.rs  test_new_types.rs  test_number_parsing.rs  (+13 more)
(+15668 files in other folders)
