[project]
name = "sharpy"
version = "1.0"
requires-python = ">=3.12"
dependencies = ["antlr4-python3-runtime >= 4.13.2"]

[project.scripts]
sharpyc = "sharpy.compiler_toolchain.sharpyc:main"

[project.optional-dependencies]
PNG = ["pydot >= 3.0.2", "graphviz >= 0.20.3"]

[build-system]
requires = [
  "black >= 24.10.0",
  "isort >= 5.13.2",
  "pyjson5 >= 1.6.8",
  "requests >= 2.32.3",
  "setuptools >= 40.8.0",
]
build-backend = "setuptools.build_meta"

# Tells setuptools that the root directory of all packages is under ./src
[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
