[package]
name = "sharpy-compiler-toolchain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sharpyc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
unicode-xid = "0.2"
unicode-normalization = "0.1"
thiserror = "1.0"
anyhow = "1.0.99"

[lints.clippy]
# Enable additional clippy lints for better code quality
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Disable some pedantic lints that are too noisy for compiler code
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"

# Compiler-specific allows
single_char_lifetime_names = "allow"
wildcard_imports = "allow"
