[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpy-dogfood"
version = "0.1.0"
description = "Dogfooding tool for the Sharpy compiler - generates, validates, compiles and verifies Sharpy code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sharpy Team"}
]
keywords = ["sharpy", "compiler", "testing", "dogfooding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sharpy-dogfood = "sharpy_dogfood.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sharpy_dogfood*"]
